--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "thai-budgets",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "bookogsend",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run assets:json && npm run transactions:json && astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "assets:json": "hledger balance assets -O json >> data/assets.json",
-    "transactions:json": "hledger print -O json >> data/transactions.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yinyinkyaw/thai-budget-hledger.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yinyinkyaw/thai-budget-hledger/issues"
-  },
-  "homepage": "https://github.com/yinyinkyaw/thai-budget-hledger#readme",
-  "dependencies": {
-    "@astrojs/react": "^4.4.2",
-    "@astrojs/ts-plugin": "^1.10.6",
-    "@tailwindcss/vite": "^4.1.18",
-    "@types/react": "^19.2.13",
-    "@types/react-dom": "^19.2.3",
-    "astro": "^5.17.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.563.0",
-    "radix-ui": "^1.4.3",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "build": "NODE_ENV=production turbo build",
+    "dev": "turbo dev",
+    "dev:web": "turbo dev --filter=website",
+    "dev:bo": "turbo dev --filter=backoffice",
+    "dev:email": "turbo dev --filter=@bookogsend/email",
+    "start": "turbo start",
+    "prisma": "npm run prisma -w packages/db --",
+    "db:generate": "npm run prisma generate",
+    "db:push": "npm run prisma db push --",
+    "predb:push": "node packages/db/create-extensions.js",
+    "lint": "turbo lint",
+    "types": "turbo types",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "clean": "turbo clean",
+    "postinstall": "npm run db:generate",
+    "weekly-billing": "curl http://localhost:3000/api/cron/weekly-billing",
+    "stripe": "dotenv -e ./.env -- sh -c 'stripe listen --forward-to localhost:3000/api/webhooks/stripe --api-key $STRIPE_SECRET_KEY'",
+    "qstash": "qstash-cli dev",
+    "finance:generate": "cd scripts && node generate-all.mjs",
+    "finance:transform": "cd scripts && node transform-data.mjs",
+    "finance:trends": "cd scripts && node generate-trends.mjs",
+    "finance:budgets": "cd scripts && node generate-budgets.mjs"
   },
   "devDependencies": {
-    "shadcn": "^3.8.4",
-    "tw-animate-css": "^1.4.0"
+    "@upstash/qstash-cli": "^2.28.3",
+    "dotenv-cli": "^8.0.0",
+    "prettier": "^3.2.5",
+    "turbo": "^2.3.3",
+    "typescript": "^5.7.3"
+  },
+  "engines": {
+    "node": ">=22"
+  },
+  "prisma": {
+    "schema": "packages/db/prisma/schema.prisma"
+  },
+  "packageManager": "npm@10.8.3",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "volta": {
+    "node": "22.18.0"
   }
 }
