Refactor project structure and update package.json for Thai Budgets app. Added new scripts for data handling and updated dependencies. Enhanced layout with global styles and improved index page to include a dashboard component.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"],
+      "@data/*": ["./data/*"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
